@@ -11,6 +11,7 @@ Bug fixes:
 	* Bug #9835 - zfs-fuse would exit when killing zfs or zpool with ctrl-c.
 	* Bug #9841 - zpool export fails with -f force option. Bug reported and fixed by philwozza.
 	* Bug #10071 - Cannot copy write protected file.
+	* Fixed bug where opened read-only files couldn't be ftruncated() (fixes IOzone sanity check).
 	* Fixed bug where files bigger than 2 GB couldn't be opened on 64-bit platforms.
 	* Fixed compilation error on CentOS 4.4 (reported by Leroy van Logchem).
 	* 'zfs umount /path/to/mntpoint' didn't work.
